Support legacy Bukkit server versions